# personal-finance-dash

./: .gitignore  IMPLEMENTATION_PLAN.md  PRD (Product Requirements Document).md  README.md  dev.sh
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 42f8f051926f_initial_schema.py
backend/app/: config.py  db.py  main.py  models.py  schemas.py  services.py
backend/app/pipeline/: clean.py  cluster.py  features.py  insights.py  label.py
backend/app/pipeline/adapters/: __init__.py  base.py  phonepe_csv.py  phonepe_pdf.py
backend/app/routers/: clusters.py  ingest.py  insights.py  transactions.py
backend/scripts/: gen_synthetic.py  reconcile.py
backend/tests/: conftest.py  test_pipeline.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ClusterScatter.tsx  Header.tsx  InsightCards.tsx  SpendOverTime.tsx  TransactionTable.tsx
frontend/src/lib/: api.ts  colors.ts
