[project]
name = "personal-finance-dash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.2",
    "numpy>=2.5.1",
    "pandas>=3.0.5",
    "pdfplumber>=0.11.10",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.5",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
